# doc_reviewer

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TASKS.md
apps/api/: Dockerfile
apps/api/app/: logging.py  (+1 more)
apps/web/: Dockerfile.prod  package-lock.json  package.json
apps/worker/: Dockerfile  pyproject.toml
apps/worker/benchmark/: judge_prompt.py  layer_outputs.py  scoring.py
apps/worker/jobs/: parse_document.py  run_analysis.py  run_analysis_details.py  run_benchmark.py  run_predicted_comments.py
apps/worker/parsers/: __init__.py  artifact.py  docling_parser.py  docx_parser.py  pdf_parser.py  text_parser.py
apps/worker/providers/: anthropic_compatible.py  base.py  hermes.py  openai_compatible.py  registry.py
apps/worker/results/: schema_validation.py
apps/worker/skills/: devils_advocate_renderer.py  gate2_challenger_renderer.py  layer_4_synthesis.py  prompt_renderer.py
apps/worker/tests/: test_benchmark_judge_prompt.py  test_benchmark_layer_outputs.py  test_benchmark_scoring.py  test_document_parsers.py  test_parse_document_job.py  test_provider_adapters.py  test_reproducibility_contract.py  test_run_analysis_details_job.py  test_run_analysis_job.py  test_run_benchmark_job.py  test_run_predicted_comments_job.py  test_schema_validation.py  test_skill_renderers.py  test_worker_structured_logging.py
contracts/schemas/: benchmark-judge-result.schema.json  devils-advocate-result.schema.json  document-parse-artifact.schema.json  main-analysis-details-result.schema.json  (+2 more)
infra/: docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
(+118 files in other folders)
