[project]
name = "gate-challenger-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "gate-challenger-api",
  "redis",
  "rq",
  "docling",
  "python-docx",
  "pypdf",
  "jsonschema",
  "openai",
  "anthropic",
  "httpx[socks]",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobs*", "parsers*", "providers*", "results*", "skills*"]
